--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 
 name: Lint
 
-# Controls when the workflow will run
+# Controls when the workflow will runs
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
@@ -88,7 +88,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: 0g
 
       - name: Run Differential ShellCheck
         uses: redhat-plumbers-in-action/differential-shellcheck@v4
